Fixed some bugs with the cursor.
Hid scrollbars that appeared when moving mouse outside cursor.
Tweaked cursor styling.
Cursor now hides when leaving canvas.

--- a/src/Components/Cursor.scss
+++ b/src/Components/Cursor.scss
@@ -2,8 +2,9 @@ $cursor-color: #ba1f33;
 
 #cursor {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 4px;
+    width: 4px;
     border: 2px solid $cursor-color;
+    background: $cursor-color;
     border-radius: 50%;
 }
